# Train-of-Thought-Agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CURRENT_PHASE.md  CURRENT_RELEASE_PHASE.md  DECISIONS.md  Dockerfile  LICENSE  MEDIA_PLAN.md  PROJECT_ROADMAP.md  PROJECT_STATE.json  README.md  RELEASE_ROADMAP.md  SECURITY.md  TODO.md  VALIDATION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml  publish-testpypi.yml
deploy/: cloudrun.yaml
docs/: CONTRIBUTING.md  SETUP.md  TECHNICAL.md  TROUBLESHOOTING.md  api.md  plugins.md
docs/assets/: README.md
examples/example-adapter/: README.md  pyproject.toml
examples/example-adapter/example_adapter/: __init__.py
location_agent/: __init__.py  cli.py  logging.py  memory.py  models.py  session.py
media/: README.md  catalog.json
media/scenarios/: phase_04_core_scene_gallery.json  phase_04_sensor_preview.json  phase_05_nested_context_walk.json  phase_07_sensor_preview_regression.json  phase_08_observation_bundle_contract.json
runtime/: agent_events.jsonl  location_memory.json
schemas/: observation_bundle.schema.json  runtime_memory.v7.schema.json
src/location_agent/: __init__.py  __main__.py  agent.py  api.py  cli.py  logging.py  memory.py  models.py  plugins.py  session.py  storage.py
src/location_agent/_internal/: __init__.py  _deprecation.py  firestore_store.py
tests/: test_agent_facade.py  test_bundle.py  test_confidence.py  test_firestore_store.py  test_http_api.py  test_media.py  test_memory.py  test_models_phase3.py  test_plugin_discovery.py  test_public_api.py  test_schemas.py  test_session.py  test_stress.py
